--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
             margin: 0;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: url('img/KAWASAN\ .jpg') no-repeat center center fixed;
+            background: url('KAWASAN.jpg') no-repeat center center fixed;
             background-size: cover;
             display: flex;
             justify-content: center;
