--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <body>
     <div class="container">
         <h1>Architecture Design Showcase</h1>
-        <p>Created by: [Nama Anda]</p>
+        <p>Created by: [Ar Rizky Madania]</p>
         <a href="https://drive.google.com/drive/folders/1Y-8uxg_IQ5gebefu97wXcGOeKFIwkMqp" class="button">View
             Designs</a>
     </div>
