--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
             text-shadow: 0 1px 3px rgba(0, 0, 0, 0.8);
         }
 
+        @media (max-width: 768px) {
+            body {
+                background: url(img/KAWASAN2.jpg) no-repeat center center fixed;
+                background-size: cover;
+            }
+        }
+
         .container {
             text-align: center;
             background: rgba(0, 0, 0, 0.7);
@@ -65,9 +72,8 @@
 <body>
     <div class="container">
         <h1>Architecture Design Showcase</h1>
-        <p>Created by: [Ar Rizky Madania]</p>
-        <a href="https://drive.google.com/drive/folders/1Y-8uxg_IQ5gebefu97wXcGOeKFIwkMqp" class="button">View
-            Designs</a>
+        <p>Created by: Ar Rizky Madania</p>
+        <a href="https://gimm17.github.io/landingpageqr/" class="button">View Designs</a>
     </div>
 </body>
 
