--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="container">
         <h1>Architecture Design Showcase</h1>
         <p>Created by: Ar Rizky Madania</p>
-        <a href="https://gimm17.github.io/landingpageqr/" class="button">View Designs</a>
+        <a href="https://drive.google.com/drive/folders/1Y-8uxg_IQ5gebefu97wXcGOeKFIwkMqp" class="button">View Designs</a>
     </div>
 </body>
 
